--- a/Crowd Monitor/Base.lproj/Main.storyboard
+++ b/Crowd Monitor/Base.lproj/Main.storyboard
@@ -296,7 +296,7 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V48-wk-UrB">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="50" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V48-wk-UrB">
                                                 <rect key="frame" x="0.0" y="32" width="85" height="34"/>
                                                 <color key="backgroundColor" name="lightGreen"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
