--- a/Crowd Monitor/Base.lproj/LaunchScreen.storyboard
+++ b/Crowd Monitor/Base.lproj/LaunchScreen.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="44" translatesAutoresizingMaskIntoConstraints="NO" id="XOX-an-wBq">
-                                <rect key="frame" x="81" y="304.5" width="252" height="287.5"/>
+                                <rect key="frame" x="81" y="354.5" width="252" height="187.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Crowd Monitor" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q5Z-6O-0NO">
                                         <rect key="frame" x="0.0" y="0.0" width="252" height="43.5"/>
@@ -26,18 +26,18 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camera.metering.spot" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="bEB-QH-ppE">
-                                        <rect key="frame" x="2" y="88.5" width="250" height="197.5"/>
+                                        <rect key="frame" x="2" y="88.5" width="250" height="97.5"/>
                                         <color key="tintColor" name="darkGreen"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="250" id="W7i-f4-SNB"/>
-                                            <constraint firstAttribute="height" constant="200" id="zOv-nb-apa"/>
+                                            <constraint firstAttribute="height" constant="100" id="zOv-nb-apa"/>
                                         </constraints>
                                     </imageView>
                                 </subviews>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" name="appBrown"/>
+                        <color key="backgroundColor" name="appBlack"/>
                         <constraints>
                             <constraint firstItem="XOX-an-wBq" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="uHT-Nj-mKb"/>
                             <constraint firstItem="XOX-an-wBq" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="z5b-L1-9Qi"/>
@@ -51,8 +51,8 @@
     </scenes>
     <resources>
         <image name="camera.metering.spot" catalog="system" width="128" height="93"/>
-        <namedColor name="appBrown">
-            <color red="0.25099998712539673" green="0.22400000691413879" blue="0.28999999165534973" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="appBlack">
+            <color red="0.10999999940395355" green="0.078000001609325409" blue="0.15299999713897705" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="darkGreen">
             <color red="0.49399998784065247" green="0.79199999570846558" blue="0.6119999885559082" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
