feat: make admin panel

--- a/Crowd Monitor/Base.lproj/LaunchScreen.storyboard
+++ b/Crowd Monitor/Base.lproj/LaunchScreen.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="44" translatesAutoresizingMaskIntoConstraints="NO" id="XOX-an-wBq">
-                                <rect key="frame" x="81" y="354.5" width="252" height="187.5"/>
+                                <rect key="frame" x="81" y="344.5" width="252" height="207.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Crowd Monitor" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q5Z-6O-0NO">
                                         <rect key="frame" x="0.0" y="0.0" width="252" height="43.5"/>
@@ -25,12 +25,12 @@
                                         <color key="textColor" name="lightGreen"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camera.metering.spot" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="bEB-QH-ppE">
-                                        <rect key="frame" x="2" y="88.5" width="250" height="97.5"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camera.viewfinder" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="bEB-QH-ppE">
+                                        <rect key="frame" x="2" y="88" width="250" height="118.5"/>
                                         <color key="tintColor" name="darkGreen"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="250" id="W7i-f4-SNB"/>
-                                            <constraint firstAttribute="height" constant="100" id="zOv-nb-apa"/>
+                                            <constraint firstAttribute="height" constant="120" id="zOv-nb-apa"/>
                                         </constraints>
                                     </imageView>
                                 </subviews>
@@ -50,7 +50,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="camera.metering.spot" catalog="system" width="128" height="93"/>
+        <image name="camera.viewfinder" catalog="system" width="128" height="115"/>
         <namedColor name="appBlack">
             <color red="0.10999999940395355" green="0.078000001609325409" blue="0.15299999713897705" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
